# HsInterface

./: HsInterface.cabal  stack.yaml
app/: Main.hs
src/: HsInterface.hs
src/HsInterface/: Finder.hs  Types.hs
