name:                HsInterface
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/HsInterface#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HsInterface
                     , HsInterface.Types
                     , HsInterface.Finder
  build-depends:       base >= 4.7 && < 5
                     , transformers >= 0.4.2.0
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , process >= 1.2.3.0
  default-language:    Haskell2010

executable HsInterface-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HsInterface
                     , monad-parallel >= 0.7.2.0
                     , ghc-paths >= 0.1.0.9
                     , process >= 1.2.3.0
                     , filepath >= 1.4.0.0
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HsInterface
